--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     <main>
       <!-- Hero section -->
       <section class="container mt-5">
-        <div class="row d-flex gap-3 gap-md-0 flex-column-reverse flex-md-row justify-content-center align-items-center">
+        <div
+          class="row d-flex gap-3 gap-md-0 flex-column-reverse flex-md-row justify-content-center align-items-center"
+        >
           <div class="col-12 col-md-8">
             <h1 class="fs-1 text-primary fw-bolder">
               Hi! <br />
@@ -116,13 +118,262 @@
             </div>
           </div>
           <div class="col-12 col-md-4">
-            <img src="./images/gias.jpg" alt="image" class="img-fluid">
+            <img src="./images/gias.jpg" alt="image" class="img-fluid" />
           </div>
         </div>
       </section>
 
-      <!--  -->
+      <!-- portfolio -->
+      <section class="container mt-5">
+        <h1 class="fs-1 text-center mb-3 text-light">Portfolio</h1>
+        <div class="d-flex flex-column gap-5">
+          <div class="w-75 custom-w mx-auto border border-light rounded-3 p-2">
+            <div
+              class="row flex-column flex-xl-row gap-4 gap-xl-0 justify-content-center align-items-center"
+            >
+              <div class="col-12 col-xl-6">
+                <div
+                  id="carouselExampleSlidesOnly"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img
+                        src="./projects-img/Travel-Search.png"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="./projects-img/travel-guru-map.png"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-xl-6">
+                <h2 class="fs-3 text-info">Online University</h2>
+                <p class="text-light">
+                  This is Travel service Agency website.user can login via
+                  Facebook sign-in,Google Sign-in and also Can Create an New
+                  Account for use the services.user can Choice the service as
+                  he/she want.
+                </p>
+                <ul>
+                  <li class="text-light">
+                    User can Choice the perfect vehicle as he/she
+                  </li>
+                  <li class="text-light">
+                    user also can see his/her Current location
+                  </li>
+                  <li class="text-light">
+                    Firebase Authentication Used in this Website.
+                  </li>
+                  <li class="text-light">
+                    Uer Can Login via (Google,Facebook)also can Create Account.
+                  </li>
+                </ul>
+                <div
+                  class="d-flex justify-content-start align-items-center gap-2 flex-wrap"
+                >
+                  <button class="btn btn-secondary">React</button>
+                  <button class="btn btn-secondary">Firebase</button>
+                  <button class="btn btn-secondary">HTML</button>
+                  <button class="btn btn-secondary">CSS</button>
+                  <button class="btn btn-secondary">Node</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-75 custom-w mx-auto border border-light rounded-3 p-2">
+            <div
+              class="row flex-column flex-xl-row gap-4 gap-xl-0 justify-content-center align-items-center"
+            >
+              <div class="col-12 col-xl-6">
+                <div
+                  id="carouselExampleSlidesOnly"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img
+                        src="./projects-img/Travel-Search.png"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="./projects-img/travel-guru-map.png"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-xl-6">
+                <h2 class="fs-3 text-info">Online University</h2>
+                <p class="text-light">
+                  This is Travel service Agency website.user can login via
+                  Facebook sign-in,Google Sign-in and also Can Create an New
+                  Account for use the services.user can Choice the service as
+                  he/she want.
+                </p>
+                <ul>
+                  <li class="text-light">
+                    User can Choice the perfect vehicle as he/she
+                  </li>
+                  <li class="text-light">
+                    user also can see his/her Current location
+                  </li>
+                  <li class="text-light">
+                    Firebase Authentication Used in this Website.
+                  </li>
+                  <li class="text-light">
+                    Uer Can Login via (Google,Facebook)also can Create Account.
+                  </li>
+                </ul>
+                <div
+                  class="d-flex justify-content-start align-items-center gap-2 flex-wrap"
+                >
+                  <button class="btn btn-secondary">React</button>
+                  <button class="btn btn-secondary">Firebase</button>
+                  <button class="btn btn-secondary">HTML</button>
+                  <button class="btn btn-secondary">CSS</button>
+                  <button class="btn btn-secondary">Node</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Qualification -->
+      <section class="container mt-5">
+        <div class="row d-flex flex-column-reverse flex-lg-row">
+          <div class="col-12 col-lg-6 d-grid gap-5">
+            <div>
+              <h1 class="fs-2 text-light">Expertise:</h1>
+              <div
+                class="d-flex justify-content-start align-items-center gap-2 flex-wrap"
+              >
+                <button class="btn btn-secondary">React</button>
+                <button class="btn btn-secondary">Firebase</button>
+                <button class="btn btn-secondary">HTML</button>
+                <button class="btn btn-secondary">CSS</button>
+                <button class="btn btn-secondary">Node</button>
+                <button class="btn btn-secondary">JavaScript</button>
+                <button class="btn btn-secondary">Express.js</button>
+                <button class="btn btn-secondary">MongoDB</button>
+              </div>
+            </div>
+            <div>
+              <h1 class="fs-2 text-light">Comfortable:</h1>
+              <div
+                class="d-flex justify-content-start align-items-center gap-2 flex-wrap"
+              >
+                <button class="btn btn-secondary">SQL</button>
+                <button class="btn btn-secondary">Socket.io</button>
+                <button class="btn btn-secondary">Redux</button>
+                <button class="btn btn-secondary">AWS</button>
+                <button class="btn btn-secondary">Docker</button>
+                <button class="btn btn-secondary">Typescript</button>
+                <button class="btn btn-secondary">Next.js</button>
+              </div>
+            </div>
+            <div>
+              <h1 class="fs-2 text-light">Familiar:</h1>
+              <div
+                class="d-flex justify-content-start align-items-center gap-2 flex-wrap"
+              >
+                <button class="btn btn-secondary">C</button>
+                <button class="btn btn-secondary">C++</button>
+                <button class="btn btn-secondary">Python</button>
+                <button class="btn btn-secondary">Django</button>
+                <button class="btn btn-secondary">Spring Boot</button>
+              </div>
+            </div>
+            <div>
+              <h1 class="fs-2 text-light">Tools:</h1>
+              <div
+                class="d-flex justify-content-start align-items-center gap-2 flex-wrap"
+              >
+                <button class="btn btn-secondary">Vscode</button>
+                <button class="btn btn-secondary">Jira</button>
+                <button class="btn btn-secondary">Trello</button>
+                <button class="btn btn-secondary">Git</button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-12 col-lg-6 d-flex justify-content-center align-items-center flex-column"
+          >
+            <h1 class="fs-1 text-info text-center">My Education</h1>
+            <p class="text-light fs-5 text-center">
+              B.Sc in Software Engineering,
+            </p>
+            <p class="text-light fs-5 text-center">
+              Yunnan University ( Kunming,Yunnan,China )
+            </p>
+            <p class="text-light fs-6 text-center">2018-2022</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Form -->
+      <section class="container mt-5 pb-5">
+        <h1 class="fs-1 text-light text-center">Contact with Me</h1>
+        <div class="w-75 custom-w mx-auto border border-light rounded-3 p-2 shadow">
+          <form class="row g-3 w-75 mx-auto my-3">
+            <div class="col-12">
+              <input
+                type="text"
+                class="form-control bg-secondary border-0 text-white"
+                id="inputAddress"
+                placeholder="Enter your name"
+              />
+            </div>
+            <div class="col-12">
+              <input
+                type="email"
+                class="form-control bg-secondary border-0 text-white"
+                id="inputAddress2"
+                placeholder="Enter your email"
+              />
+            </div>
+            <div class="mb-3">
+              <textarea
+                class="form-control bg-secondary border-0 text-white"
+                id="exampleFormControlTextarea1"
+                placeholder="Write something here..."
+                rows="3"
+              ></textarea>
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-info w-100">Send</button>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="py-3 my-4 border-top border-2 mt-5 p-5 mx-auto text-center">
+      <p class="text-light">Copyright © 2021 | gias uddin</p>
+      <p class="text-light">kunming,yunnan,china</p>
+      <div class="d-flex justify-content-center align-items-center gap-3">
+        <ion-icon class="text-info fs-4" name="logo-github"></ion-icon>
+        <ion-icon class="text-info fs-4" name="logo-youtube"></ion-icon>
+        <ion-icon class="text-info fs-4" name="logo-instagram"></ion-icon>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
